fixed some issues with overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto mono", monospace;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
